--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ body {
 <div class="banner-section">
   <img src="Growfax_banner.jpg" alt="Growfax Banner">
   <h2>Welcome to Growfax</h2>
-  <p>Your centralized hub for essential tools and community resources.</p>
+  <p>private growtopia server.</p>
 </div>
 
 <div class="container" id="downloads">
