--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ body {
       <img src="surge5.png" alt="Surge 5 Logo"> Play on iOS
     </a>
 
-    <a href="PowerTunel_Host.txt" class="btn-windows2" download>
+    <a href="PowerTunel_Host.txt" class="btn-powertunnel" download>
       <img src="powertunnel.jpeg" alt="PowerTunnel Logo"> Play on Windows
     </a>
   </div>
