--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@ body {
     overflow: hidden;
 }
 
-/* Efek animasi logo */
 .banner-section img {
     max-width: 250px;
     height: auto;
@@ -81,13 +80,11 @@ body {
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
 }
 
-/* Efek pantulan (gerak lembut ke atas-bawah) */
 @keyframes floatLogo {
     0%, 100% { transform: translateY(0); }
     50% { transform: translateY(-10px); }
 }
 
-/* Efek berkilau shimmer di logo */
 @keyframes shine {
     0% { filter: brightness(1) drop-shadow(0 0 5px rgba(255,255,255,0.2)); }
     50% { filter: brightness(1.3) drop-shadow(0 0 25px rgba(255,255,255,0.6)); }
@@ -136,6 +133,7 @@ body {
     font-weight: 600;
     text-decoration: none;
     transition: transform 0.2s ease, opacity 0.2s ease, box-shadow 0.3s;
+    border: 2px solid transparent;
 }
 
 .platform-buttons a img {
@@ -152,10 +150,10 @@ body {
 }
 
 /* Warna tombol */
-.btn-android { background-color: #34c759; }
-.btn-windows { background-color: #0078d7; }
-.btn-ios { background-color: #007aff; }
-.btn-windows2 { background-color: #b71c1c; } /* PowerTunnel */
+.btn-android { background-color: #34c759; border-color: #2ea94f; }
+.btn-windows { background-color: #0078d7; border-color: #0063b1; }
+.btn-ios { background-color: #007aff; border-color: #005bb5; }
+.btn-powertunnel { background-color: #b71c1c; border-color: #8b0000; }
 
 /* Discord */
 .discord-section {
@@ -215,20 +213,20 @@ body {
   <h2>📥 Essential File Downloads</h2>
 
   <div class="platform-buttons">
-    <a href="Growfax_VirtualHost.txt" class="btn-android" download>
+    <a href="https://growfaxcdn.site/a9d12/android.txt" class="btn-android" target="_blank">
       <img src="virtual-host.png" alt="Virtual Host Logo"> Play on Android
     </a>
 
-    <a href="Growfax_Patched_.bat" class="btn-windows" download>
+    <a href="https://growfaxcdn.site/z1m02/windows.bat" class="btn-windows" target="_blank">
       <img src="windows.png" alt="Windows Logo"> Play on Windows
     </a>
 
-    <a href="GrowFax ios.txt" class="btn-ios" download>
+    <a href="https://growfaxcdn.site/q8k41/ios.txt" class="btn-ios" target="_blank">
       <img src="surge5.png" alt="Surge 5 Logo"> Play on iOS
     </a>
 
-    <a href="PowerTunel_Host.txt" class="btn-powertunnel" download>
-      <img src="powertunnel.jpeg" alt="PowerTunnel Logo"> Play on Windows
+    <a href="https://growfaxcdn.site/t3b61/powertunnel.txt" class="btn-powertunnel" target="_blank">
+      <img src="powertunnel.jpeg" alt="PowerTunnel Logo"> Play via PowerTunnel
     </a>
   </div>
 </div>
