--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
     font-family:"Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     background:var(--bg);
     color:var(--text);
-    -webkit-font-smoothing:antialiased;
-    -moz-osx-font-smoothing:grayscale;
   }
 
-  /* header */
   .header{
     background:var(--card-bg);
     box-shadow:var(--card-shadow);
@@ -55,7 +52,7 @@
 
   .controls{ display:flex; align-items:center; gap:10px; }
 
-  .theme-toggle{
+  .theme-toggle, .lang-select{
     display:inline-flex;
     align-items:center;
     gap:8px;
@@ -67,7 +64,15 @@
     cursor:pointer;
   }
 
-  /* banner */
+  select.lang-select {
+    appearance: none;
+    font-size: 0.95rem;
+    background: transparent;
+    border: none;
+    color: var(--text);
+  }
+
+  /* Banner */
   .banner-section{
     background: linear-gradient(90deg, rgba(0,0,0,0.04), rgba(255,255,255,0.02));
     padding:34px 0;
@@ -75,9 +80,7 @@
   }
   .banner-section img{ max-width:200px; border-radius:8px; display:block; margin:0 auto 10px; }
   .banner-section h2{ margin:6px 0; color:#ffaa00; text-shadow:0 0 8px rgba(255,170,0,0.25); }
-  .banner-section p{ margin:0; opacity:0.95; }
 
-  /* container */
   .container{ width:90%; max-width:1100px; margin:26px auto; text-align:center; }
 
   .platform-buttons{
@@ -129,7 +132,7 @@
   }
   @keyframes sweep{ 0%{ left:-60%; } 100%{ left:160%; } }
 
-  /* pulsing colored glow */
+  /* Glow animation */
   @keyframes buttonGlow {
     0% { box-shadow: 0 0 8px var(--glow-color, rgba(255,255,255,0.15)); }
     50% { box-shadow: 0 0 28px var(--glow-color, rgba(255,255,255,0.28)); }
@@ -156,11 +159,6 @@
     color:var(--text);
     opacity:.85;
   }
-
-  @media (max-width:480px){
-    .platform-buttons a{ width:92%; padding:12px; }
-    .header-content{ padding:8px; gap:8px; }
-  }
 </style>
 </head>
 <body data-theme="light">
@@ -168,11 +166,18 @@
   <header class="header">
     <div class="header-content">
       <div style="display:flex;align-items:center;gap:12px">
-        <h1>Growfax Official</h1>
-        <nav><a href="#downloads" style="color:var(--accent); text-decoration:none; font-weight:700;">📥 Downloads</a></nav>
+        <h1 data-i18n="title">Growfax Official</h1>
+        <nav><a href="#downloads" style="color:var(--accent); text-decoration:none; font-weight:700;" data-i18n="downloads">📥 Downloads</a></nav>
       </div>
 
       <div class="controls" role="region" aria-label="controls">
+        <div class="lang-toggle">
+          🌐 
+          <select id="langSelect" class="lang-select" title="Change language">
+            <option value="en">🇬🇧 English</option>
+            <option value="id">🇮🇩 Bahasa</option>
+          </select>
+        </div>
         <button id="themeToggle" class="theme-toggle" aria-pressed="false" title="Toggle theme">🌞 <strong id="themeLabel">Light</strong></button>
       </div>
     </div>
@@ -180,80 +185,112 @@
 
   <section class="banner-section">
     <img src="Growfax_banner.jpg" alt="Growfax Banner">
-    <h2>Welcome to Growfax</h2>
-    <p>Private Growtopia server.</p>
+    <h2 data-i18n="welcome">Welcome to Growfax</h2>
+    <p data-i18n="subtitle">Private Growtopia server.</p>
   </section>
 
   <main class="container" id="downloads">
-    <h2>📥 Essential File Downloads</h2>
+    <h2 data-i18n="essential">📥 Essential File Downloads</h2>
 
-    <div class="platform-buttons" role="list">
-      <a href="Growfax_VirtualHost.txt" class="btn-android" download role="listitem">
-        <img src="virtual-host.png" alt="" aria-hidden="true">
-        <span>Play on Android</span>
-      </a>
-
-      <a href="Growfax_Patched_.bat" class="btn-windows" download role="listitem">
-        <img src="windows.png" alt="" aria-hidden="true">
-        <span>Play on Windows</span>
-      </a>
-
-      <a href="GrowFax_ios.txt" class="btn-ios" download role="listitem">
-        <img src="surge5.png" alt="" aria-hidden="true">
-        <span>Play on iOS</span>
-      </a>
-
-      <a href="PowerTunnel_Host.txt" class="btn-powertunnel" download role="listitem">
-        <img src="powertunnel.jpeg" alt="" aria-hidden="true">
-        <span>Play via PowerTunnel</span>
-      </a>
+    <div class="platform-buttons">
+      <a href="Growfax_VirtualHost.txt" class="btn-android" download><img src="virtual-host.png" alt=""><span data-i18n="android">Play on Android</span></a>
+      <a href="Growfax_Patched_.bat" class="btn-windows" download><img src="windows.png" alt=""><span data-i18n="windows">Play on Windows</span></a>
+      <a href="GrowFax_ios.txt" class="btn-ios" download><img src="surge5.png" alt=""><span data-i18n="ios">Play on iOS</span></a>
+      <a href="PowerTunnel_Host.txt" class="btn-powertunnel" download><img src="powertunnel.jpeg" alt=""><span data-i18n="powertunnel">Play via PowerTunnel</span></a>
     </div>
   </main>
 
-  <section class="discord-section" aria-labelledby="discordHeading">
+  <section class="discord-section">
     <img src="discord.jpeg" alt="Discord" style="width:48px;height:48px;border-radius:8px; display:block; margin:0 auto 10px;">
-    <h3 id="discordHeading">Join Our Community</h3>
-    <p>Connect with other members and get support in our official Discord server.</p>
-    <a href="https://discord.gg/smgS6sq83y" target="_blank" rel="noopener" style="color:inherit; font-weight:700; text-decoration:underline; display:inline-block; margin-top:10px;">Join Growfax Discord Now!</a>
+    <h3 data-i18n="community">Join Our Community</h3>
+    <p data-i18n="connect">Connect with other members and get support in our official Discord server.</p>
+    <a href="https://discord.gg/smgS6sq83y" target="_blank" rel="noopener" style="color:inherit; font-weight:700; text-decoration:underline; display:inline-block; margin-top:10px;" data-i18n="join">Join Growfax Discord Now!</a>
   </section>
 
   <footer class="footer">
-    <small>© 2025 Growfax. All rights reserved.</small>
+    <small data-i18n="footer">© 2025 Growfax. All rights reserved.</small>
   </footer>
 
 <script>
-  // Theme toggle: persists in localStorage
+  // --- THEME TOGGLE ---
   const themeToggleBtn = document.getElementById('themeToggle');
   const themeLabel = document.getElementById('themeLabel');
-
   function setTheme(theme){
     document.body.setAttribute('data-theme', theme);
     localStorage.setItem('growfax_theme', theme);
     themeLabel.textContent = theme === 'dark' ? 'Dark' : 'Light';
     themeToggleBtn.setAttribute('aria-pressed', theme === 'dark');
   }
-
   themeToggleBtn.addEventListener('click', ()=>{
     const curr = document.body.getAttribute('data-theme') || 'light';
     setTheme(curr === 'dark' ? 'light' : 'dark');
   });
-
   (function initTheme(){
     const saved = localStorage.getItem('growfax_theme');
     if(saved) setTheme(saved);
-    else {
-      const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-      setTheme(prefersDark ? 'dark' : 'light');
-    }
+    else setTheme(window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
   })();
 
-  // Download confirmation (English)
+  // --- LANGUAGE TRANSLATION ---
+  const langSelect = document.getElementById('langSelect');
+  const translations = {
+    en: {
+      title: "Growfax Official",
+      downloads: "📥 Downloads",
+      welcome: "Welcome to Growfax",
+      subtitle: "Private Growtopia server.",
+      essential: "📥 Essential File Downloads",
+      android: "Play on Android",
+      windows: "Play on Windows",
+      ios: "Play on iOS",
+      powertunnel: "Play via PowerTunnel",
+      community: "Join Our Community",
+      connect: "Connect with other members and get support in our official Discord server.",
+      join: "Join Growfax Discord Now!",
+      footer: "© 2025 Growfax. All rights reserved.",
+      confirm: "Are you sure you want to download"
+    },
+    id: {
+      title: "Growfax Resmi",
+      downloads: "📥 Unduhan",
+      welcome: "Selamat Datang di Growfax",
+      subtitle: "Server Growtopia pribadi.",
+      essential: "📥 Unduhan File Penting",
+      android: "Main di Android",
+      windows: "Main di Windows",
+      ios: "Main di iOS",
+      powertunnel: "Main lewat PowerTunnel",
+      community: "Bergabung dengan Komunitas Kami",
+      connect: "Terhubung dengan anggota lain dan dapatkan dukungan di server Discord resmi kami.",
+      join: "Gabung Discord Growfax Sekarang!",
+      footer: "© 2025 Growfax. Semua hak dilindungi.",
+      confirm: "Apakah Anda yakin ingin mengunduh"
+    }
+  };
+
+  function setLanguage(lang){
+    localStorage.setItem('growfax_lang', lang);
+    document.querySelectorAll('[data-i18n]').forEach(el=>{
+      const key = el.getAttribute('data-i18n');
+      if(translations[lang][key]) el.textContent = translations[lang][key];
+    });
+  }
+
+  langSelect.addEventListener('change', ()=> setLanguage(langSelect.value));
+
+  (function initLang(){
+    const saved = localStorage.getItem('growfax_lang') || 'en';
+    langSelect.value = saved;
+    setLanguage(saved);
+  })();
+
+  // --- DOWNLOAD CONFIRMATION ---
   document.querySelectorAll('.platform-buttons a').forEach(btn=>{
     btn.addEventListener('click', function(e){
-      // If user used modifier keys to open in new tab, let it pass without confirmation
       if (e.ctrlKey || e.metaKey || e.button === 1) return;
       const href = this.getAttribute('href') || 'file';
-      const ok = confirm(`Are you sure you want to download "${href}"?`);
+      const lang = localStorage.getItem('growfax_lang') || 'en';
+      const ok = confirm(`${translations[lang].confirm} "${href}"?`);
       if(!ok) e.preventDefault();
     });
   });
